syntax = "proto3";
option java_package = "com.github.alonwang.transport.protobuf";

message HelloMessage {
    string msg = 1;
}
message MeToMessage {
    string msg = 1;
}